@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 28, 2010</p>
+      <p>Last Updated: November 29, 2010</p>
     </td>
   </tr>
 </table>
@@ -1997,7 +1997,11 @@ nuttx-5.15 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
     * arch/arm/src/lpc17xx/lpc17_ssp.c -- Fix compilation errors when SSP1 is
       selected.
     * configs/olimex-lpc1766stk/nsh -- Enable network and SD/MMC card support in
-      NSH (not verified on initial check-in)
+	  NSH.  Networking and telnetd interface functional.  Still testing SPI-based
+	  SD/MMC.
+	* examples/nsh/nsh_netinit.c -- Fix NSH bug.  If CONFIG_NET is selected, but
+	  CONFIG_EXAMPLES_NSH_TELNETD is not selected, then the network is never
+      initialized and bad things happen if you try to ping.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
